# flooring-optimizer

./: .gitignore  CLAUDE.md  CONSTITUTION.md  DESIGN.md  PATTERN_SPEC.md  config.example.yaml  findings.md  progress.md  pyproject.toml  requirements.txt  task_plan.md
docs/: cutting_plan_format.md  flooring_constraints.md  math_model.md
docs/superpowers/specs/: 2026-06-12-three-l-pattern-design.md
floorplan/: __init__.py  __main__.py  cli.py  config.py  models.py  multi_optimize.py  optimize.py  verify.py
floorplan/geometry/: __init__.py  room.py
floorplan/layout/: __init__.py  aligned.py  base.py  board_pool.py  five_board.py  herringbone.py  l_triple.py  source_manager.py  staggered.py  staggered_new.py
floorplan/svg/: renderer.py
projects/compare/: aligned.yaml  five-board-square.yaml  herringbone.yaml  staggered.yaml
projects/compare/aligned/: cutting_plan.txt
projects/compare/five-board-square/: cutting_plan.txt
projects/compare/herringbone/: cutting_plan.txt
projects/compare/staggered/: cutting_plan.txt
projects/room-2856x3462/: config.yaml  cutting_plan.txt
projects/room-2856x3462-herringbone/: config.yaml  cutting_plan.txt
projects/room-2856x3462-l-triple/: config-multi.yaml  cutting_plan.txt  loss_audit.txt
projects/room-2856x3462-staggered/: config-multi.yaml  config.yaml  cutting_plan.txt
projects/room-2856x3462-staggered/multi/: cutting_plan.txt
projects/three-l-multi-room/: a.jfif  config.yaml
tests/: test_config.py  test_geometry.py  test_layout.py  test_svg.py  test_verify_edges.py
(+2 files in other folders)
